# libicedb

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE.txt  README.md  _config.yml  cmake-settings.h.in  germany_api.sln  index.md
apps/: CMakeLists.txt
apps/3d_structures/: 3ds-main.cpp  CMakeLists.txt  README.md  shape.hpp  shapeIOtext.hpp  shapes-main.cpp
apps/3d_structures_beta/: CMakeLists.txt  shape.hpp  shapeIOtext.cpp  shapeIOtextParsers.cpp  shapeIOtextParsers2.cpp  shapes-main.cpp
apps/3d_structures_example/: CMakeLists.txt  README.md  shape.hpp  shapeIOtext.cpp  shapeIOtextParsers2.cpp  shapes-main.cpp
apps/3d_structures_importer/: CMakeLists.txt  README.md  shape.hpp  shapeIOpsu.cpp  shapeIOtext.cpp  shapeIOtext.hpp  shapeIOtextParsers2.cpp  shapes-main.cpp
apps/3d_structures_multithreaded/: CMakeLists.txt  README.md  shapeIOtextParsers2.cpp
apps/3d_structures_singlefile/: CMakeLists.txt  shapeIOtext.hpp  shapeIOtextParsers2.cpp  shapes-main.cpp
apps/3d_structures_singlethreaded/: CMakeLists.txt  README.md  shapeIOpsu.cpp  shapeIOtextParsers2.cpp  shapes-main.cpp
apps/level_0/: CMakeLists.txt  shapes-app.cpp
apps/level_1/: CMakeLists.txt  shapes-setattr-app.cpp  shapes-settbl-app.cpp
apps/onesphere/: CMakeLists.txt  main.cpp
apps/particle_physical_properties/: CMakeLists.txt  README.md  ppp.cpp
apps/refract/: CMakeLists.txt  README.md  main.cpp
apps/scattering_data_importer/: CMakeLists.txt  README.md  sd-main.cpp
apps/testing/: CMakeLists.txt
apps/testing/core/: CMakeLists.txt  globals.cpp  globals.hpp  testing_hh_file_io.cpp  (+4 more)
apps/units/: CMakeLists.txt  README.md  main.cpp  units-app.cpp
apps/version/: CMakeLists.txt  version.cpp
germany_api/: CMakeLists.txt  db.h  defs.cpp  defs.h  dlls.h  dlls.hpp  dllsImpl.cpp  dllsImpl.h  dllsImpl.hpp  error.cpp  error.h  errorCodes.cpp  errorCodes.h  error_context.cpp  error_context.h  germany_api.vcxproj  germany_api.vcxproj.filters  log.h  mem.cpp  mem.h  mem.hpp  util.cpp  util.h
germany_api/germany/: MurmurHash3.h  defs.h  dlls.h  dlls.hpp  dllsImpl.h  dllsImpl.hpp  error.h  error.hpp  errorCodes.h  errorCodes.hpp  error_context.h  hash.h  io.h  mem.h  os_functions.h  os_functions.hpp  plugins.h  units.h  units.hpp  unitsInterface.hpp  util.h  versioning.hpp  versioningForwards.h  versioningForwards.hpp
germany_api/src/: MurmurHash3.cpp  defs.cpp  dllsImpl.cpp  error.cpp  errorCodes.cpp  error_context.cpp  fs.cpp  hash.cpp  mem.cpp  os_functions.cpp  plugins.cpp  units.cpp  util.cpp  versioning.cpp
lib/: CMakeLists.txt  CTestConfig.cmake  environment-module-buildtree.in  environment-module.in
lib/icedb/: Attribute.hpp  Common.hpp  Constants.hpp  Data_Types.hpp  Database.hpp  Group.hpp  PPP.hpp  ShapeAlgs.hpp  Shapes.hpp  Table.hpp  defs.h  dlls.hpp  error.h  error.hpp  errorCodes.h  errorTypes.hpp  error_context.h  esv.hpp  exv.hpp  fs.hpp  fs_backend.hpp  icedb.h  icedb.hpp  io.hpp  logging.hpp  options.hpp  optionsForwards.hpp  plugin.hpp  registry.hpp  shape.hpp  shapeAlg.hpp  splitSet.hpp  util.h  util.hpp  zeros.hpp
lib/private/: Attribute_impl.hpp  Database_impl.hpp  Shape_impl.hpp  Testing.hpp  hdf5_load.h  hdf5_supplemental.hpp  linterp.h  options.hpp  os_impl.hpp  refractBackend.hpp  unitsBackend.hpp
lib/src/: Attributes.cpp  Common.cpp  Constants.cpp  Groups.cpp  PPP.cpp  ShapeAlgs.cpp  Shapes.cpp  Tables.cpp  Testing.cpp  _placeholder.cpp  databases.cpp  dlls.cpp  dlls_placeholder.cpp  error.cpp  errorCodes.cpp  errorTypes.cpp  error_context.cpp  export-hdf5.cpp  exv.cpp  formula-requirements.cpp  fs_backend.cpp  fs_win.cpp  logging.cpp  options.cpp  os_functions.cpp  refract.cpp  refractImpl.cpp  refractStore.cpp  registry.cpp  size.cpp  splitSet.cpp  units.cpp  unitsPlugins.cpp  unitsSimple.cpp  util.cpp  versioning.cpp  zeros.cpp
lib/util/: cmake-settings.h.in
libicedb/: CMakeLists.txt
libicedb/docs/: Discussion_2017-10-11.md  README.md  attributes.md  shapes.md
libicedb/icedb/: defs.h
libicedb/src/: MurmurHash3.cpp  attrs.cpp  candidate_shapeAlg.cpp  defs.cpp  dllsImpl.cpp  error.cpp  errorCodes.cpp  error_context.cpp  fs.cpp  hash.cpp  mem.cpp  os_functions.cpp  plugins.cpp  shapes.cpp  tables.cpp  units.cpp  util.cpp  versioning.cpp
plugins/adda/: CMakeLists.txt  defs.hpp  plugin-adda.cpp  plugin-adda.hpp  shape-adda.cpp
plugins/ddscat/: CMakeLists.txt  ddOriData.cpp  ddOriData.h  ddOriDataParsers.cpp  ddOriDataParsers.h  ddOutput.cpp  ddOutput.h  ddScattMatrix.cpp  ddScattMatrix.h  ddVersions.cpp  ddVersions.h  ddpar-keys.cpp  ddpar-parsers.cpp  ddpar.cpp  ddpar.h  defs.hpp  dielTabFile.cpp  dielTabFile.h  exvIOddscat.cpp  parids.h  phaseFunc.cpp  phaseFunc.h  plugin-io-ddscat.cpp  plugin-io-ddscat.hpp  plugin-shapes.cpp  rotations.cpp  rotations.h  shapefile.cpp  shapefile.h  shapefile_parsers.cpp
plugins/ddscat_io/: CMakeLists.txt  plugin_ddscat.cpp  plugin_ddscat.hpp  raw_shape_read.cpp  raw_shape_write.cpp  shape.h
plugins/example/: CMakeLists.txt  README.md  defs.hpp  plugin-example.cpp  plugin-example.hpp  shape-import-example.cpp
plugins/fs_posix/: CMakeLists.txt  fs_posix.cpp  fs_posix.hpp  links.cpp  paths.cpp
plugins/fs_win/: CMakeLists.txt  fs_win.cpp  fs_win.hpp  paths.cpp
plugins/general_text/: CMakeLists.txt
plugins/hbf-miniball/: CMakeLists.txt  README.md  my_Seb_debug.h  plugin-miniball.cpp  plugin-miniball.hpp  test-miniball.cpp
plugins/netcdf/: CMakeLists.txt  paths.cpp  plugin_netcdf.cpp  plugin_netcdf.hpp  plugin_netcdf_impl.hpp  plugin_netcdf_interface.h
plugins/psu/: CMakeLists.txt  defs.hpp  exvIOpsu.cpp  particle-ids.cpp  plugin-psu.cpp  plugin-psu.hpp  shapeIOpsu.cpp
test/: CMakeLists.txt  IntegratedTesting.cpp  IntegratedTesting.hpp  testing-settings.h.in
test/Algorithms/: CMakeLists.txt  test-algs.cpp
test/core/: CMakeLists.txt  globals.hpp  testing_hh_file_io.cpp  testing_hh_tags.cpp  testing_hh_types.cpp
test/database/: CMakeLists.txt
test/io/: CMakeLists.txt  test-adda-shapes.cpp  test-ddscat6-shapes.cpp  test-ddscat7-shapes.cpp  test-psu-shapes.cpp
(+2845 files in other folders)
