option (BUILD_APPS "Build the apps" ON)
set( CMAKE_DIRECTORY_LABELS "apps" )
if (BUILD_APPS)
	add_subdirectory(3d_structures)
	add_subdirectory(3d_structures_importer)
	add_subdirectory(onesphere)
	add_subdirectory(units)
	add_subdirectory(refract)
	add_subdirectory(scattering_data_importer)
	add_subdirectory(version)
endif()
